# dynamic-workflows-demo

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
src/todo_app/: __init__.py  app.py  main.py  todo_store.py
tasks-folder/.claude-plugin/: plugin.json
tasks-folder/skills/tasks-folder-fixer/: SKILL.md
tasks-folder/skills/tasks-folder-implementer/: SKILL.md
tasks-folder/skills/tasks-folder-layout/: SKILL.md
tasks-folder/skills/tasks-folder-reviewer/: SKILL.md
tasks-folder/workflows/: tasks-folder-workflow.js
tasks/doing/: todo-app.md
tasks/logs/setup-python-repo/: 2026-06-01_15-01-29_implementer.md  2026-06-01_15-03-04_reviewer.md
tasks/logs/todo-app/: 2026-06-01_15-10-17_implementer.md  2026-06-01_15-12-19_reviewer.md
tasks/logs/todo-store/: 2026-06-01_15-05-56_implementer.md  2026-06-01_15-07-23_reviewer.md
tasks/todo/: setup-python-repo.md  todo-store.md
tests/: test_smoke.py  test_todo_store.py
