[project]
name = "dynamic-workflows-demo"
version = "0.1.0"
description = "Todo app scaffold managed by uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello = "todo_app.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
