[project]
name = "dynamic-workflows-demo"
version = "0.1.0"
description = "Todo app scaffold managed by uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
hello = "todo_app.main:main"
app = "todo_app.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
